--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h4>This is the first Project</h4>
+    <h3>This is first project</h3>
 </body>
 </html>
